# SchematronMCP

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GRADIO_APP_README.md  INSTALL.txt  LEARNINGS.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODOS.md  claude_desktop_config.example.json  config.template.json  example_schemas.py  gradio_app.py  html_cleaner.py  lm_studio_inference.py  mlx_inference.py  pyproject.toml  secrets_template.json  server.py  test_extraction.py
docs/: gradio-ui.md  quickstart.md
examples/: README.md  gradio_app.py  test_extraction.py
schematron_mcp/: __init__.py  server.py
schematron_mcp/cleaning/: __init__.py
schematron_mcp/inference/: __init__.py
tests/: README.md  __init__.py
